sumo/tests/sumo/output/e3/errors/pos_empty__exit/errors.sumo
Error: Attribute 'pos' in definition of e3-detector/exit '4/1to3/1' is empty.
Quitting (on error).
